[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8.12"
name = "dem_utils"
description = "Useful tools when working with stim.DetectorErrorModel"
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "stim",
    "scipy",
]
keywords = ["stim", "DetectorErrorModel", "QEC"]

[tool.setuptools.packages.find]
include = ["dem_utils", "dem_utils.*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "scalene", "black", "sphinx", "sphinx-rtd-theme", "pytest-black"]

